@@ -153,6 +153,7 @@
 
 #define DEFAULT_MULTAGGRREMOVE      FALSE /**< should multi-aggregations only be performed if the constraint can be
                                            *   removed afterwards? */
+#define DEFAULT_MAXMULTIAGGRQUOT    1e+03 /**< maximum coefficient dynamism (ie. maxabsval / minabsval) for multiaggregation */
 
 #define MAXDNOM                   10000LL /**< maximal denominator for simple rational fixed values */
 #define MAXSCALEDCOEF                   0 /**< maximal coefficient value after scaling */
@@ -311,6 +312,7 @@ struct SCIP_ConshdlrData
    int                   rangedrowfreq;      /**< frequency for applying ranged row propagation */
    SCIP_Bool             multaggrremove;     /**< should multi-aggregations only be performed if the constraint can be
                                               *   removed afterwards? */
+   SCIP_Real             maxmultiaggrquot;   /**< maximum coefficient dynamism (ie. maxabsval / minabsval) for multiaggregation */
 };
 
 /** linear constraint update method */
@@ -9519,8 +9521,6 @@ void getNewSidesAfterAggregation(
    assert(SCIPisLE(scip, *newlhs, *newrhs));
 }
 
-#define MAXMULTIAGGRQUOTIENT 1e+03
-
 /* processes equality with more than two variables by multi-aggregating one of the variables and converting the equality
  * into an inequality; if multi-aggregation is not possible, tries to identify one continuous or integer variable that
  * is implicitly integral by this constraint
@@ -9674,7 +9674,7 @@ SCIP_RETCODE convertLongEquality(
          maxabsval = absval;
 
       /* do not try to multi aggregate, when numerical bad */
-      if( maxabsval / minabsval > MAXMULTIAGGRQUOTIENT )
+      if( maxabsval / minabsval > conshdlrdata->maxmultiaggrquot )
          return SCIP_OKAY;
 
       slacktype = SCIPvarGetType(var);
@@ -17481,6 +17481,10 @@ SCIP_RETCODE SCIPincludeConshdlrLinear(
          "constraints/" CONSHDLR_NAME "/multaggrremove",
          "should multi-aggregations only be performed if the constraint can be removed afterwards?",
          &conshdlrdata->multaggrremove, TRUE, DEFAULT_MULTAGGRREMOVE, NULL, NULL) );
+   SCIP_CALL( SCIPaddRealParam(scip,
+         "constraints/" CONSHDLR_NAME "/maxmultiaggrquot",
+         "maximum coefficient dynamism (ie. maxabsval / minabsval) for multiaggregation",
+         &conshdlrdata->maxmultiaggrquot, TRUE, DEFAULT_MAXMULTIAGGRQUOT, 1.0, SCIP_REAL_MAX, NULL, NULL) );
 
    return SCIP_OKAY;
 }
